# sigma-rag

./: .gitignore  LICENSE  README.md  benchmark.py  benchmark_beir.py  blog_post.md  demo.py  pyproject.toml  requirements.txt  validate.py
.github/workflows/: ci.yml
notebooks/: demo.ipynb
sigma_rag/: __init__.py  embedder.py  index.py  noise_floor.py  pipeline.py  retriever.py  stats.py  types.py
tests/: conftest.py  test_embedder.py  test_index.py  test_noise_floor.py  test_pipeline.py  test_retriever.py
